# projeto_integrador_transdisciplinar_em_ciencia_da_computacao_ll

./: README.md  pyproject.toml
cake/: db.sqlite3  manage.py
cake/carrinho/: views.py
cake/carrinho/templates/: enderecos_entrega.html  resumo_compra.html  resumo_pedido.html
cake/escake/: asgi.py  settings.py  urls.py  wsgi.py
cake/login/templates/: cadastro.html  logar.html  recuperar.html
cake/perfil/templates/: perfil.html
cake/templates/: base.html
cake/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
cake/templates/static/base/css/: base.css
cake/templates/static/carrinho/css/: carrinho.css  enderecos_entrega.css  resumo_compra.css
cake/templates/static/detalhesproduto/css/: detalhesproduto.css
cake/templates/static/home/css/: home.css
cake/templates/static/login/css/: logar.css
cake/templates/static/perfil/css/: add_endereco.css  perfil.css
